gitignore added to ai files

--- a/index.html
+++ b/index.html
@@ -73,21 +73,13 @@
       <div class="container">
         <div class="footer-container">
           <div class="powered">
-            <img src="images/svg/Powered-Codebulls.svg" alt="" />
+            <img src="images/svg/Powered-Codebulls.svg" alt=""/>
           </div>
           <div class="social">
-            <a href="https://www.facebook.com/codebullsteam" target="_blank">
-              <img src="images/svg/fb.svg" alt="" />
-            </a>
-            <a href="https://www.instagram.com/codebullsteam" target="_blank">
-              <img src="images/svg/instagram.svg" alt="" />
-            </a>
-            <a href="https://www.linkedin.com/company/codebulls" target="_blank">
-              <img src="images/svg/linkedin.svg" alt="" />
-            </a>
-            <a href="https://www.youtube.com/channel/UChyg0o51Nvs6mFqxuaI5Dbg" target="_blank">
-              <img src="images/svg/yt.svg" alt="" />
-            </a>
+            <a href="https://www.facebook.com/codebullsteam" target="_blank"><img src="images/svg/fb.svg" alt=""/></a>
+            <a href="https://www.instagram.com/codebullsteam" target="_blank"><img src="images/svg/instagram.svg" alt=""/></a>
+            <a href="https://www.linkedin.com/company/codebulls" target="_blank"><img src="images/svg/linkedin.svg" alt=""/></a>
+            <a href="https://www.youtube.com/channel/UChyg0o51Nvs6mFqxuaI5Dbg" target="_blank"><img src="images/svg/yt.svg" alt=""/></a>
           </div>
         </div>
       </div>
